frikobler aksjonspunktdtoene for institusjon/opplæring